<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item android:id="@+id/action_refresh"
            android:title="@string/action_refresh"
            app:showAsAction="never" />
    <item
        android:title="@string/action_Fav"
        app:showAsAction="never">
        <menu>
                <item android:id="@+id/action_Showfav"
                    android:title="@string/action_Showfav"
                    android:orderInCategory="100"
                    app:showAsAction="never" />
                <item android:id="@+id/action_Hidefav"
                    android:title="@string/action_Hidefav"
                    android:orderInCategory="100"
                    app:showAsAction="never" />
        </menu>
    </item>
</menu>