<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:fitsSystemWindows="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewA"
                app:layout_collapseMode="parallax">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/landPosterImageView"
                    android:src="@drawable/placeholder_land"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:maxHeight="300dp"
                    android:contentDescription="@string/str_movietitle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_movietitle"
                    android:id="@+id/titleTextView"
                    android:textColor="@color/colorPureWhite"
                    android:paddingBottom="8dp"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="bottom"
                    android:background="@color/colorTransBlack"
                    />
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:id="@+id/toolBar"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:layout_marginBottom="4dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/colorWhite">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView xmlns="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:padding="6dp">
                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:id="@+id/posterImageView"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@color/colorPureWhite"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ratingTextView"
                            android:textSize="18sp"
                            android:text="@string/str_dummyRating"
                            android:textColor="@color/colorAccent"/>

                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:id="@+id/ratingBar"
                            android:isIndicator="true"
                            android:stepSize="0.01"
                            android:rating="3.5"
                            style="?android:attr/ratingBarStyleSmall"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/dateTextView"
                            android:textSize="20sp"
                            android:textColor="@color/colorPrimaryText"
                            android:gravity="center"
                            android:paddingTop="16dp"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/str_genre"
                            android:textSize="18sp"
                            android:textColor="@color/colorPrimaryText"
                            android:id="@+id/genreTextView"
                            android:padding="4dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:id="@+id/votesTextView"
                            android:textColor="@color/colorSecondaryText"
                            android:layout_margin="6dp"
                            />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView xmlns="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_margin="12dp"
                android:layout_marginTop="0dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/descTextView"
                    android:textSize="18sp"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_margin="8dp"
                    android:padding="4dp" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            app:layout_anchor="@id/app_bar_layout"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right"
            />

    </android.support.design.widget.CoordinatorLayout>
